Deployment/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  dashboard-app
  template:
    metadata:
      labels:
        app: dashboard-app
    spec:
      containers:
      - name: backend
        image: "farsetalbi/dashboard-api:1"
        ports:
        - containerPort: 8800
