Deployment/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-app
spec:
  selector:
    app: dashboard-app
  ports:
    - port: 80
      targetPort: 8800
